--- a/docker-compose.traefik.yaml
+++ b/docker-compose.traefik.yaml
@@ -17,7 +17,7 @@ services:
     container_name: jenkins
     volumes:
       - jenkins_home:/var/jenkins_home
-      - $(which docker):/usr/bin/docker
+      - ${DOCKER_PATH}:/usr/bin/docker
       - /var/run/docker.sock:/var/run/docker.sock
     labels:
       - traefik.http.routers.${TRAEFIK_ROUTE}.rule=Host(${TRAEFIK_APP_DOMAIN})
