--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -13,5 +13,5 @@ services:
     container_name: jenkins
     volumes:
       - jenkins_home:/var/jenkins_home
-      - $(which docker):/usr/bin/docker
+      - ${DOCKER_PATH}:/usr/bin/docker
       - /var/run/docker.sock:/var/run/docker.sock
